--- a/src/components/heroSection/heroSetcion.css
+++ b/src/components/heroSection/heroSetcion.css
@@ -2,215 +2,7 @@
 @media only screen and (max-width: 600px) {
   .hero-slide {
     width: 100%;
-    height: 600px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    display: flex;
-    align-items: center;
-  }
-
-  .hero-silde-content-session {
-    height: 90%;
-    width: 95%;
-    display: grid;
-    padding: 30px 20px;
-  }
-
-  .primary-button {
-    /* width: 42% !important; */
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    gap: 12px;
-  }
-
-  .arrow-icon-img {
-    border-radius: 50%;
-    background-color: var(--primary-background-color);
-  }
-  .sub-heading-main {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: space-around;
-    /* margin-top: 20px; */
-  }
-
-  .dynamic-img-main {
-    display: flex;
-  }
-
-  .dynamic-img {
-    margin-right: -13px;
-  }
-}
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-     
-      .hero-slide {
-        width: 100%;
-        height: 600px;
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        display: flex;
-        align-items: center;
-    }
-
-    .hero-silde-content-session {
-        height: 90%;
-        width: 95%;
-        display: grid;
-        padding: 30px 20px;
-
-    }
-
-    .button-styles {
-        /* width: 42% !important; */
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        gap: 12px;
-    }
-
-    .arrow-icon-img{
-        border-radius: 50%;
-        background-color: var(--primary-background-color);
-    }
-    .sub-heading-main {
-        display: flex;
-        flex-direction: column;
-        align-items: start;
-        justify-content: space-around;
-        /* margin-top: 20px; */
-
-    }
-
-    .dynamic-img-main {
-        display: flex;
-    }
-
-    .dynamic-img {
-        margin-right: -13px;
-
-    }
-   
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-    .hero-slide {
-        width: 100%;
-        height: 90vh;
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        display: flex;
-        align-items: center;
-    }
-
-    .hero-silde-content-session {
-        display: grid;
-        width: 45%;
-        padding: 20px;
-        margin-left: 5%;
-        gap: 25px;
-
-    }
-
-    .button-styles {
-        /* width: 42% !important; */
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-    }
-
-    /* .arrow-icon-img{
-        border-radius: 50%;
-        background-color: var(--primary-background-color);
-    } */
-    .sub-heading-main {
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        gap: 15px;
-        margin-top: 20px;
-
-    }
-
-    .dynamic-img-main {
-        display: flex;
-    }
-
-    .dynamic-img {
-        margin-right: -13px;
-
-    }
-  
-  
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-    .hero-slide {
-        width: 100%;
-        height: 90vh;
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        display: flex;
-        align-items: center;
-    }
-
-    .hero-silde-content-session {
-        display: grid;
-        width: 45%;
-        padding: 20px;
-        margin-left: 5%;
-        gap: 25px;
-
-    }
-
-    .button-styles {
-        /* width: 42% !important; */
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-    }
-
-    /* .arrow-icon-img{
-        border-radius: 50%;
-        background-color: var(--primary-background-color);
-    } */
-    .sub-heading-main {
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        gap: 15px;
-        margin-top: 20px;
-
-    }
-
-    .dynamic-img-main {
-        display: flex;
-    }
-
-    .dynamic-img {
-        margin-right: -13px;
-
-    }
-
-    
-
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-  .hero-slide {
-    width: 100%;
-    height: 90vh;
+    height: 500px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -220,10 +12,10 @@
 
   .hero-silde-content-session {
     display: grid;
-    width: 45%;
-    padding: 20px;
+    width: 87%;
+    padding: 15px;
     margin-left: 5%;
-    gap: 25px;
+    gap: 20px;
   }
 
   .primary-button {
@@ -232,6 +24,7 @@
     align-items: center;
     justify-content: space-evenly;
     padding: 10px 20px;
+    gap: 18px;
   }
 
   .arrow-icon-img {
@@ -242,10 +35,19 @@
 
   .sub-heading-main {
     display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: space-evenly;
-    gap: 15px;
-    margin-top: 20px;
+    gap: 10px;
+  }
+
+  .secondary-paragraph-pec {
+    font-size: 15px;
+    font-weight: 400;
+    line-height: var(--secondary-paragraph-line-height);
+    color: #F3E8EA;
+    font-family: var(--primary-font-family);
+
+
   }
 
   .dynamic-img-main {
@@ -255,6 +57,286 @@
   .dynamic-img {
     margin-right: -13px;
   }
+
+  .secondary-paragraph.white {
+    color: #ffffff;
+  }
+
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+
+  .hero-slide {
+    width: 100%;
+    height: 500px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+  }
+
+  .hero-silde-content-session {
+    display: grid;
+    width: 87%;
+    padding: 15px;
+    margin-left: 5%;
+    gap: 20px;
+  }
+
+  .primary-button {
+    /* width: 42% !important; */
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 9px 18px;
+    gap: 18px;
+  }
+
+  .arrow-icon-img {
+    border-radius: 50%;
+    background-color: #841d2e;
+    padding: 1px;
+  }
+
+  .sub-heading-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 10px;
+  }
+
+  .secondary-paragraph-pec {
+    font-size: 15px;
+    font-weight: 400;
+    line-height: var(--secondary-paragraph-line-height);
+    color: #F3E8EA;
+    font-family: var(--primary-font-family);
+
+
+  }
+
+  .dynamic-img-main {
+    display: flex;
+  }
+
+  .dynamic-img {
+    margin-right: -13px;
+  }
+
+  .secondary-paragraph.white {
+    color: #ffffff;
+  }
+
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .hero-slide {
+    width: 100%;
+    height: 700px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+  }
+
+  .hero-silde-content-session {
+    /* display: grid; */
+    width: 75%;
+    padding: 15px;
+    margin-left: 5%;
+    gap: 20px;
+  }
+
+  .primary-button {
+    /* width: 42% !important; */
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 12px 20px;
+    gap: 18px;
+  }
+
+  .arrow-icon-img {
+    border-radius: 50%;
+    background-color: #841d2e;
+    padding: 1px;
+  }
+
+  .sub-heading-main {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 18px;
+    margin-top: 30px;
+  }
+
+  .secondary-paragraph-pec {
+    font-size: 15px;
+    font-weight: 400;
+    line-height: var(--secondary-paragraph-line-height);
+    /* color: var(--secondary-colour); */
+    color: #F3E8EA;
+    font-family: var(--primary-font-family);
+
+
+  }
+
+  .dynamic-img-main {
+    display: flex;
+  }
+
+  .dynamic-img {
+    margin-right: -13px;
+  }
+
+  .secondary-paragraph.white {
+    color: #ffffff;
+  }
+
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .hero-slide {
+    width: 100%;
+    height: 700px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+  }
+
+  .hero-silde-content-session {
+    /* display: grid; */
+    width: 70%;
+    padding: 15px;
+    margin-left: 5%;
+    gap: 20px;
+  }
+
+  .primary-button {
+    /* width: 42% !important; */
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 12px 20px;
+    gap: 18px;
+  }
+
+  .arrow-icon-img {
+    border-radius: 50%;
+    background-color: #841d2e;
+    padding: 1px;
+  }
+
+  .sub-heading-main {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 18px;
+    margin-top: 30px;
+  }
+
+  .secondary-paragraph-pec {
+    font-size: 15px;
+    font-weight: 400;
+    line-height: var(--secondary-paragraph-line-height);
+    /* color: var(--secondary-colour); */
+    color: #F3E8EA;
+    font-family: var(--primary-font-family);
+
+
+  }
+
+  .dynamic-img-main {
+    display: flex;
+  }
+
+  .dynamic-img {
+    margin-right: -13px;
+  }
+
+  .secondary-paragraph.white {
+    color: #ffffff;
+  }
+
+
+
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .hero-slide {
+    width: 100%;
+    height: 700px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+  }
+
+  .hero-silde-content-session {
+    /* display: grid; */
+    width: 45%;
+    padding: 15px;
+    margin-left: 5%;
+    gap: 20px;
+  }
+
+  .primary-button {
+    /* width: 42% !important; */
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 12px 20px;
+    gap: 18px;
+  }
+
+  .arrow-icon-img {
+    border-radius: 50%;
+    background-color: #841d2e;
+    padding: 1px;
+  }
+
+  .sub-heading-main {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 18px;
+    margin-top: 30px;
+  }
+
+  .secondary-paragraph-pec {
+    font-size: 15px;
+    font-weight: 400;
+    line-height: var(--secondary-paragraph-line-height);
+    /* color: var(--secondary-colour); */
+    color: #F3E8EA;
+    font-family: var(--primary-font-family);
+
+
+  }
+
+  .dynamic-img-main {
+    display: flex;
+  }
+
+  .dynamic-img {
+    margin-right: -13px;
+  }
+
   .secondary-paragraph.white {
     color: #ffffff;
   }
