--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -1,4 +1,3 @@
-
 /* .navTitle {
     @apply primary-paragraph
     color: var(--primary-color);
@@ -12,16 +11,19 @@
     justify-content: center;
     /* padding: 10px; */
   }
+
   .search,
   .fee-text,
   .nav-text,
   .text {
     display: none;
   }
+
   .nav-head {
     padding: 12px 5%;
     font-family: "Montserrat", sans-serif;
   }
+
   .nav-bar2 {
     display: flex;
     justify-content: space-between;
@@ -29,16 +31,19 @@
     align-items: center;
     padding: 10px 70px;
   }
+
   .mobile-search {
     display: flex;
     align-items: center;
     gap: 4px;
   }
+
   .mobile-text {
     display: flex;
     align-items: center;
     /* gap: 4px; */
   }
+
   .search-input {
     margin-top: 10px;
     border: 1px solid #ccc;
@@ -64,16 +69,19 @@
     justify-content: space-between;
     /* padding: 10px; */
   }
+
   .search,
   .fee-text,
   .nav-text,
   .text {
     display: none;
   }
+
   .nav-head {
     padding: 12px 5%;
     font-family: "Montserrat", sans-serif;
   }
+
   .nav-bar2 {
     /* width: 60%; */
     display: flex;
@@ -88,11 +96,13 @@
     align-items: center;
     gap: 4px;
   }
+
   .mobile-search {
     display: flex;
     align-items: center;
     gap: 4px;
   }
+
   .search-input {
     margin-top: 10px;
     border: 1px solid #ccc;
@@ -117,6 +127,7 @@
     justify-content: space-between;
     padding: 10px;
   }
+
   /* .hamburger-icon {
     display: none;
   } */
@@ -125,6 +136,7 @@
     padding: 12px 5%;
     font-family: "Montserrat", sans-serif;
   }
+
   .nav-bar2 {
     /* width: 80%; */
     display: flex;
@@ -132,16 +144,19 @@
     align-items: center;
     padding: 10px;
   }
+
   .search {
     display: flex;
     align-items: center;
     gap: 6px;
   }
+
   .nav-text {
     display: flex;
     align-items: center;
     gap: 4px;
   }
+
   .mobile-text {
     display: none;
   }
@@ -160,6 +175,7 @@
     justify-content: space-between;
     padding: 10px;
   }
+
   /* .hamburger-icon {
     display: none;
   } */
@@ -168,6 +184,7 @@
     padding: 12px 5%;
     font-family: "Montserrat", sans-serif;
   }
+
   .nav-bar2 {
     /* width: 70%; */
     display: flex;
@@ -175,19 +192,23 @@
     align-items: center;
     padding: 10px;
   }
+
   .search {
     display: flex;
     align-items: center;
     gap: 6px;
   }
+
   .nav-text {
     display: flex;
     align-items: center;
     gap: 4px;
   }
+
   .mobile-text {
     display: none;
   }
+
   .text,
   .fee-text {
     display: block;
@@ -215,38 +236,44 @@
   .nav-bar {
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    padding: 8px 10px;
     align-items: center;
   }
+
   /* .hamburger-icon {
     display: none;
   } */
 
   .nav-head {
-    padding: 15px 7%;
+    padding: 10px 7%;
     font-family: "Montserrat", sans-serif;
   }
+
   .nav-bar2 {
     /* width: 60%; */
     display: flex;
     justify-content: space-between;
-    gap: 10px;
+    gap: 15px;
     align-items: center;
     padding: 10px;
   }
+
   .search {
     display: flex;
     align-items: center;
-    gap: 6px;
+    gap: 10px;
   }
+
   .nav-text {
     display: flex;
     align-items: center;
     gap: 4px;
   }
+
   .mobile-text {
     display: none;
   }
+
   .text,
   .fee-text {
     display: block;
