--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,9 @@
   color: var(--primary-paragraph-font-color);
 }
 
+.black {
+  color: #000 !important;
+}
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .primary-heading {
