--- a/src/components/courses/Courses.css
+++ b/src/components/courses/Courses.css
@@ -193,7 +193,7 @@
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
   .course-container {
-    padding: 40px 70px;
+    padding: 40px;
   }
 
   .titleBar {
