--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -12,7 +12,7 @@
     /* padding: 10px; */
   }
 
-  .search,
+  .search-wrapper,
   .fee-text,
   .nav-text,
   .text {
@@ -56,21 +56,18 @@
     justify-content: center;
     align-items: center;
     /* transition: all 0.3s ease; */
-
   }
 }
 
-
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-
   .nav-bar {
     display: flex;
     justify-content: space-between;
     /* padding: 10px; */
   }
 
-  .search,
+  .search-wrapper,
   .fee-text,
   .nav-text,
   .text {
@@ -115,25 +112,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
   }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-
   .nav-bar {
     display: flex;
     justify-content: space-between;
     padding: 10px;
   }
 
-  /* .hamburger-icon {
-    display: none;
-  } */
-
   .nav-head {
-    padding: 12px 5%;
+    padding: 5px 3%;
     font-family: "Montserrat", sans-serif;
   }
 
@@ -145,10 +136,28 @@
     padding: 10px;
   }
 
-  .search {
+  .search-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: relative;
+  }
+
+  .search-icon-text {
     display: flex;
     align-items: center;
     gap: 6px;
+    cursor: pointer;
+  }
+  .search-input {
+    margin-top: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    outline: none;
+    font-size: 14px;
+    padding: 6px 10px;
+    width: 250px;
+    transition: all 0.3s ease-in-out;
   }
 
   .nav-text {
@@ -181,7 +190,7 @@
   } */
 
   .nav-head {
-    padding: 12px 5%;
+    padding: 5px 3%;
     font-family: "Montserrat", sans-serif;
   }
 
@@ -193,10 +202,28 @@
     padding: 10px;
   }
 
-  .search {
+  .search-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: relative;
+  }
+
+  .search-icon-text {
     display: flex;
     align-items: center;
     gap: 6px;
+    cursor: pointer;
+  }
+  .search-input {
+    margin-top: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    outline: none;
+    font-size: 14px;
+    padding: 6px 10px;
+    width: 250px;
+    transition: all 0.3s ease-in-out;
   }
 
   .nav-text {
@@ -223,16 +250,10 @@
     align-items: center;
     justify-content: space-between;
   }
-
-  .hamburger-icon {
-    display: none;
-  }
-
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
-
   .nav-bar {
     display: flex;
     justify-content: space-between;
@@ -240,12 +261,8 @@
     align-items: center;
   }
 
-  /* .hamburger-icon {
-    display: none;
-  } */
-
   .nav-head {
-    padding: 10px 7%;
+    padding: 5px 3%;
     font-family: "Montserrat", sans-serif;
   }
 
@@ -258,10 +275,28 @@
     padding: 10px;
   }
 
-  .search {
+  .search-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: relative;
+  }
+
+  .search-icon-text {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 6px;
+    cursor: pointer;
+  }
+  .search-input {
+    margin-top: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    outline: none;
+    font-size: 14px;
+    padding: 6px 10px;
+    width: 250px;
+    transition: all 0.3s ease-in-out;
   }
 
   .nav-text {
