--- a/src/components/rednavBar/rednav.css
+++ b/src/components/rednavBar/rednav.css
@@ -21,7 +21,7 @@
     background-color: #841d2e;
   }
   .red-head {
-    padding: 10px 30px;
+    padding: 10px 5px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -34,9 +34,9 @@
     font-size: 16px;
     line-height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     text-align: center;
-    width: 40%;
+    /* width: 40%; */
     color: #c6979f;
   }
   .white-text {
@@ -52,8 +52,9 @@
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
-    width: 60%;
+    /* width: 60%; */
     color: #f3e8ea;
+    justify-content: end;
   }
   .details img {
     width: 16px;
@@ -81,7 +82,7 @@
     font-size: 16px;
     line-height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     text-align: center;
     width: 30%;
     color: #c6979f;
@@ -97,8 +98,9 @@
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
-    width: 50%;
+    /* width: 50%; */
     color: #f3e8ea;
+    justify-content: end;
   }
   .details img {
     width: 16px;
@@ -111,7 +113,7 @@
     background-color: #841d2e;
   }
   .red-head {
-    padding: 10px 30px;
+    padding: 10px 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -124,9 +126,9 @@
     font-size: 16px;
     line-height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     text-align: center;
-    width: 30%;
+    width: 20%;
     color: #c6979f;
   }
   .white-text {
@@ -140,8 +142,9 @@
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
-    width: 40%;
+    /* width: 40%; */
     color: #f3e8ea;
+    justify-content: end;
   }
   .details img {
     width: 16px;
