--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -1,9 +1,3 @@
-/* .navTitle {
-    @apply primary-paragraph
-    color: var(--primary-color);
-    
-} */
-
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .nav-bar {
@@ -11,8 +5,8 @@
     justify-content: center;
     /* padding: 10px; */
   }
-
-  .search-wrapper,
+  .button-search-wrapper,
+  .search-icon-text,
   .fee-text,
   .nav-text,
   .text {
@@ -20,7 +14,7 @@
   }
 
   .nav-head {
-    padding: 12px 5%;
+    padding: 5px 1%;
     font-family: "Montserrat", sans-serif;
   }
 
@@ -41,8 +35,17 @@
   .mobile-text {
     display: flex;
     align-items: center;
+    /* justify-content: space-between; */
     /* gap: 4px; */
   }
+  /* 
+  .button-search-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: static; 
+    width: 100%;
+  } */
 
   .search-input {
     margin-top: 10px;
@@ -57,6 +60,22 @@
     align-items: center;
     /* transition: all 0.3s ease; */
   }
+  .mobile-search-input-wrapper {
+    padding: 10px;
+    /* width: 100%; */
+  }
+  .mobile-search-input {
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 6px 10px;
+    font-size: 14px;
+  }
+  .mobile-search-group {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -64,10 +83,10 @@
   .nav-bar {
     display: flex;
     justify-content: space-between;
-    /* padding: 10px; */
+    padding: 10px;
   }
-
-  .search-wrapper,
+  .button-search-wrapper,
+  .search-icon-text,
   .fee-text,
   .nav-text,
   .text {
@@ -75,7 +94,7 @@
   }
 
   .nav-head {
-    padding: 12px 5%;
+    padding: 5px 1%;
     font-family: "Montserrat", sans-serif;
   }
 
@@ -85,12 +104,13 @@
     justify-content: space-between;
     gap: 5px;
     align-items: center;
-    padding: 10px;
+    /* padding: 10px; */
   }
 
   .mobile-text {
     display: flex;
     align-items: center;
+    /* justify-content: space-between; */
     gap: 4px;
   }
 
@@ -99,6 +119,14 @@
     align-items: center;
     gap: 4px;
   }
+  /* 
+  .button-search-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: static;
+    width: 100%;
+  } */
 
   .search-input {
     margin-top: 10px;
@@ -113,6 +141,24 @@
     justify-content: center;
     align-items: center;
   }
+  .mobile-search-input-wrapper {
+    padding: 10px;
+    /* width: 50%; */
+    display: flex;
+  }
+  .mobile-search-input {
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 6px 10px;
+    font-size: 14px;
+    justify-content: flex-end;
+  }
+  .mobile-search-group {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
@@ -120,7 +166,7 @@
   .nav-bar {
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    /* padding: 10px; */
   }
 
   .nav-head {
@@ -133,13 +179,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    /* padding: 10px; */
   }
 
-  .search-wrapper {
+  .button-search-wrapper {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    flex-direction: row-reverse;
+    align-items: center;
     position: relative;
   }
 
@@ -166,7 +212,8 @@
     gap: 4px;
   }
 
-  .mobile-text {
+  .mobile-text,
+  .mobile-search-input-wrapper {
     display: none;
   }
 
@@ -182,7 +229,7 @@
   .nav-bar {
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    /* padding: 10px; */
   }
 
   /* .hamburger-icon {
@@ -199,13 +246,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    /* padding: 10px; */
   }
 
-  .search-wrapper {
+  .button-search-wrapper {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    flex-direction: row-reverse;
+    align-items: center;
     position: relative;
   }
 
@@ -232,7 +279,8 @@
     gap: 4px;
   }
 
-  .mobile-text {
+  .mobile-text,
+  .mobile-search-input-wrapper  {
     display: none;
   }
 
@@ -257,7 +305,7 @@
   .nav-bar {
     display: flex;
     justify-content: space-between;
-    padding: 8px 10px;
+    padding: 8px 0;
     align-items: center;
   }
 
@@ -272,14 +320,15 @@
     justify-content: space-between;
     gap: 15px;
     align-items: center;
-    padding: 10px;
+    /* padding: 10px; */
   }
 
-  .search-wrapper {
+  .button-search-wrapper {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    flex-direction: row-reverse;
+    align-items: center;
     position: relative;
+    gap: 10px;
   }
 
   .search-icon-text {
@@ -305,7 +354,8 @@
     gap: 4px;
   }
 
-  .mobile-text {
+  .mobile-text,
+  .mobile-search-input-wrapper {
     display: none;
   }
 
